# planner_test

./: .gitignore  README.md  Usage.txt
.history/: .gitignore_20231218201616
src/test_goalpoint_publisher/: CMakeLists.txt  package.xml
src/test_goalpoint_publisher/config/: base_config.json
src/test_goalpoint_publisher/data/: TPCAP_10.txt  TPCAP_11.txt  TPCAP_12.txt  TPCAP_14.txt  TPCAP_2.txt  TPCAP_23.txt  TPCAP_24.txt  TPCAP_26.txt  TPCAP_27.txt  TPCAP_28.txt  TPCAP_29.txt  TPCAP_30.txt  TPCAP_31.txt  TPCAP_33.txt  TPCAP_35.txt  TPCAP_5.txt  TPCAP_8.txt  campus_test.txt  campus_test_result.txt  indoor_test.txt  test_map_thin_1m_to_10pixel_1_cry_result.txt  test_map_thin_1m_to_10pixel_1_cry_result_0.txt  test_map_thin_1m_to_10pixel_1_cry_result_1.txt  test_map_thin_1m_to_10pixel_1_cry_result_2.txt  test_map_thin_1m_to_10pixel_1_cry_result_3.txt  test_map_thin_1m_to_10pixel_1_cry_result_4.txt  test_map_thin_1m_to_10pixel_1_cry_result_5.txt  tunnel_test.txt  tunnel_test_result.txt  tunnel_test_result1.txt  visual.py
src/test_goalpoint_publisher/data/TPCAP/: resultForRearCenter.txt  run.ipynb
src/test_goalpoint_publisher/data/TXTForCenter/: TPCAP_11.txt  TPCAP_14.txt  TPCAP_5.txt  TPCAP_8.txt
src/test_goalpoint_publisher/data/oldTXT/: test_map_thin_1m_to_10pixel_1_cry.txt  test_map_thin_1m_to_10pixel_1_cry_result.txt  test_map_thin_1m_to_10pixel_1_cry_result_5.txt  test_map_thin_1m_to_10pixel_1_cry_result_6.txt
src/test_goalpoint_publisher/launch/: test_publisher.launch
src/test_goalpoint_publisher/output/: TPCAP_10_result.txt  TPCAP_10_resultViz_0.txt  TPCAP_10_resultViz_0_success.txt  TPCAP_11_result.txt  TPCAP_11_resultViz_0.txt  TPCAP_11_resultViz_0_success.txt  TPCAP_12_result.txt  TPCAP_12_resultViz_0.txt  TPCAP_12_resultViz_0_success.txt  TPCAP_13_result.txt  TPCAP_14_result.txt  TPCAP_14_resultViz_0.txt  TPCAP_14_resultViz_0_success.txt  TPCAP_22_result.txt  TPCAP_23_result.txt  TPCAP_23_resultViz_0.txt  TPCAP_23_resultViz_0_success.txt  TPCAP_24_result.txt  TPCAP_24_resultViz_0.txt  TPCAP_25_result.txt  TPCAP_26_result.txt  TPCAP_27_result.txt  TPCAP_27_resultViz_0.txt  TPCAP_28_result.txt  TPCAP_28_resultViz_0.txt  TPCAP_28_resultViz_0_success.txt  TPCAP_29_result.txt  TPCAP_29_resultViz_0.txt  TPCAP_29_resultViz_0_success.txt  TPCAP_2_result.txt  TPCAP_2_resultViz_0.txt  TPCAP_2_resultViz_0_success.txt  TPCAP_30_result.txt  TPCAP_31_result.txt  TPCAP_32_result.txt  TPCAP_33_result.txt  TPCAP_33_resultViz_0.txt  TPCAP_34_result.txt  TPCAP_35_result.txt  TPCAP_5_result.txt  (+6 more)
src/test_goalpoint_publisher/output/ENHA/: TPCAP_24_resultViz_0.txt  TPCAP_30_resultViz_0.txt  TPCAP_33_resultViz_0.txt  TPCAP_34_resultViz_0.txt
src/test_goalpoint_publisher/output/HA/: TPCAP_10_resultViz_0.txt  TPCAP_11_resultViz_0.txt  TPCAP_12_resultViz_0.txt  TPCAP_14_resultViz_0.txt  TPCAP_24_resultViz_0.txt  TPCAP_30_resultViz_0.txt  TPCAP_33_resultViz_0.txt  TPCAP_34_resultViz_0.txt  TPCAP_5_resultViz_0.txt  TPCAP_8_resultViz_0.txt
src/test_goalpoint_publisher/src/: test_goalpoint_publisher_node.cpp  tgp.txt  tgp2.txt
(+5 files in other folders)
