<?xml version="1.0"?>
<package format="2">
  <name>test_goalpoint_publisher</name>
  <version>0.0.0</version>
  <description>The test_goalpoint_publisher package</description>

  <maintainer email="zly@todo.todo">zly</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS package dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend> <!-- Added dependency for ros::package::getPath -->
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend> <!-- Added export dependency for ros::package::getPath -->
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend> <!-- Added runtime dependency for ros::package::getPath -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
